--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,11 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+  scroll-behavior: smooth;
+}:root {
+  --font-bricolage: 'Bricolage', sans-serif;
+  --font-source-sans: 'Source Sans Pro', sans-serif;
+  --font-source-serif: 'Source Serif Pro', serif;
+  --font-work-sans: 'Work Sans', sans-serif;
+}
