--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,22 @@ html {
   align-items: center;  /* vertically centers items */
   gap: 1rem;            /* optional spacing between columns */
 }
+.messages-img {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background-image: url('/messages-1920.png');
+  background-size:contain;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.hero-container {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  border-radius: 40px;
+  overflow: hidden; 
+  background-image: url('/Hero-bg.png');
+  background-size: cover;
+  background-position: center;
+}
