--- a/app/globals.css
+++ b/app/globals.css
@@ -31,14 +31,13 @@ body {
 }
 html {
   scroll-behavior: smooth;
-}:root {
-  --font-bricolage: 'Bricolage', sans-serif;
-  --font-source-sans: 'Source Sans Pro', sans-serif;
-  --font-source-serif: 'Source Serif Pro', serif;
-  --font-work-sans: 'Work Sans', sans-serif;
 }
-
-
+:root {
+  --font-bricolage: "Bricolage", sans-serif;
+  --font-source-sans: "Source Sans Pro", sans-serif;
+  --font-source-serif: "Source Serif Pro", serif;
+  --font-work-sans: "Work Sans", sans-serif;
+}
 
 .page-container {
   width: min(100%, 80rem);
@@ -71,15 +70,15 @@ html {
 .navbar-grid {
   display: grid;
   grid-template-columns: auto 1fr auto;
-  align-items: center;  /* vertically centers items */
-  gap: 1rem;            /* optional spacing between columns */
+  align-items: center; /* vertically centers items */
+  gap: 1rem; /* optional spacing between columns */
 }
 .messages-img {
   height: 100%;
   width: 100%;
   position: absolute;
-  background-image: url('/messages-1920.png');
-  background-size:contain;
+  background-image: url("/messages-1920.png");
+  background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
 }
@@ -88,8 +87,14 @@ html {
   height: 100%;
   position: relative;
   border-radius: 40px;
-  overflow: hidden; 
-  background-image: url('/Hero-bg.png');
+  overflow: hidden;
+  background-image: url("/Hero-bg.png");
   background-size: cover;
   background-position: center;
+}
+.f-1-heading .feature-title {
+  box-shadow: 0px 4px 15.5px 0px #0052ff0d, inset 0px -1px 1px 0px #0052ff1a;
+  color: rgba(0, 82, 255, 1);
+  background: rgba(0, 82, 255, 0.07);
+  backdrop-filter: blur(37.099998474121094px);
 }
