--- a/app/globals.css
+++ b/app/globals.css
@@ -86,7 +86,7 @@ html {
   width: 100%;
   height: 100%;
   position: relative;
-  border-radius: 40px;
+  /* border-radius: 40px; */
   overflow: hidden;
   background-image: url("/Hero-bg.png");
   background-size: cover;
