--- a/app/globals.css
+++ b/app/globals.css
@@ -92,3 +92,27 @@ html {
   background: rgba(0, 82, 255, 0.07);
   backdrop-filter: blur(37.099998474121094px);
 }
+.features-banner {
+  background-image: url('/features-banner.svg');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* height: 21px;  */
+}
+
+.faq-banner {
+  background-image: url('/faq-banner.svg');
+   background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* .banner {
+  width: 100%;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 218px;
+  margin-bottom: 50px;
+
+} */
